# Titan-Command-v21

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  inference.py  main.py  my_env.py  openenv.yaml  pyproject.toml  requirements.txt  run.sh
.streamlit/: config.toml
backend/: main.py  my_env.py
scratch/: test_boundaries.py  test_graders.py  test_tasks_package.py
server/: app.py
tasks/: graders.py
titan-command-v8/backend/: main.py
titan-command-v8/frontend/: app.py
