[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emergency-ai-v1"
version = "1.0.0"
description = "Professional urban crisis management simulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "streamlit",
    "openai",
    "pyyaml"
]

# This is exactly what the validator is looking for
[project.scripts]
openenv-server = "server.app:main"

[tool.setuptools]
packages = ["server"]